--- a/src/app/activities/dialog-overview-example-dialog.scss
+++ b/src/app/activities/dialog-overview-example-dialog.scss
@@ -10,7 +10,7 @@
 
   button {
       cursor: pointer;
-      background-color: #7048EC !important;
+      background-color: #7048ec !important;
       color: white;
       font-weight: bold;
       padding: 15px 30px;
