--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
           <mat-card-title>{{username}}</mat-card-title>
             
         </mat-card-header>
-          <div style="text-align: center; color:#b9e05c;">My MIMS Account</div>
+          <div style="text-align: center; color:#7048ec;">My MIMS Account</div>
         <mat-card-content>
          
         </mat-card-content>
