--- a/src/app/clubs/selectedclub/clubactivities/clubactivities.component.html
+++ b/src/app/clubs/selectedclub/clubactivities/clubactivities.component.html
@@ -1,10 +1,26 @@
-<mat-card>
+<mat-card class="contribution-card">
     <mat-card-header>
-        <mat-card-title>Recent Activities</mat-card-title>
+        <mat-card-title>Contribution </mat-card-title>
+        <button mat-raised-button (click)="onFilter()">Filter</button>
     </mat-card-header>
     <mat-card-content>
+        <mat-form-field class="picker" appearance='fill'>
+            <mat-label>Start Date</mat-label>
+            <input matInput [matDatepicker]="picker" placeholder="Choose Start date" formControlName = "start">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
         
+          <mat-form-field class="picker" appearance='fill'>
+            <mat-label>End Date</mat-label>
+            <input matInput [matDatepicker]="picker1" placeholder="Choose End date" formControlName = "end">
+            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+          </mat-form-field>
+
+          <p>This month: </p>
+          
+
 
     </mat-card-content>
-    <mat-card-footer>For more press here</mat-card-footer>
 </mat-card>
