--- a/src/app/clubs/selectedclub/clubleaders/clubleaders.component.html
+++ b/src/app/clubs/selectedclub/clubleaders/clubleaders.component.html
@@ -1,8 +1,9 @@
 <div class="leader-card">
   <p>LEADERSHIP</p>
-  <p>Chairman: <span>Simon Msuva</span></p>
-  <p>Assistant Chairman: <span>...</span></p>
-  <p>Secretary: <span>...</span></p>
-  <p>Assistant Secretary: <span>...</span></p>
+  <p>Chairman: <span>{{clubLeader?.chairman}}</span></p>
+  <p>Assistant Chairman: <span>{{clubLeader?.ass_chairman}}</span></p>
+  <p>Secretary: <span>{{clubLeader?.secretary}}</span></p>
+  <p>Assistant Secretary: <span>{{clubLeader?.ass_secretary}}</span></p>
+  <p>Treasurer: <span>{{clubLeader?.treasurer}}</span></p>
   <button>Edit</button>
 </div>
