--- a/src/app/clubs/selectedclub/selectedclub.component.html
+++ b/src/app/clubs/selectedclub/selectedclub.component.html
@@ -14,9 +14,9 @@
     </section>
     <section class="column1">
         <div class="row1">
-            <app-clubleaders></app-clubleaders>
+            <app-clubleaders [clubLeader]="clubLeader"></app-clubleaders>
         </div>
-        <div class="row2" hidden>
+        <div class="row2" >
             <app-clubactivities></app-clubactivities>
         </div>
     </section>
