--- a/src/app/members/members.component.scss
+++ b/src/app/members/members.component.scss
@@ -65,7 +65,7 @@ h1 {
   height: 100%;
   width: 200px;
   margin-left: 20px;
-  background-color: #7048EC;
+  background-color: #7048ec;
   font-weight: bold;
   color: white;
   padding: 10px 20px;
