--- a/src/app/activities/activities.component.scss
+++ b/src/app/activities/activities.component.scss
@@ -99,7 +99,7 @@ h1 {
   height: 100%;
   width: 200px;
   margin-left: 20px;
-  background-color: #7048EC;
+  background-color: #7048ec;
   font-weight: bold;
   color: white;
   padding: 10px 20px;
@@ -128,7 +128,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #7048EC;
+  background-color: #7048ec;
   color: white;
 }
 
