--- a/src/app/members/selectedmember/memberactivities/memberactivities.component.html
+++ b/src/app/members/selectedmember/memberactivities/memberactivities.component.html
@@ -1,12 +1,32 @@
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>Projects Engaged </mat-card-title>
-    </mat-card-header>
-    <!-- <img matCardImage src="Card wide image source"> -->
-    <mat-card-content>
-        Text content
-    </mat-card-content>
-    <mat-card-actions align="start">
-        <!-- <button mat-button (click)="onAction1">Action1</button> -->    
-    </mat-card-actions>
-</mat-card>
+<p>Contribution History</p>
+<button (click)="addContribution(memberId)">Add Payment</button>
+
+<table mat-table [dataSource]="contribution" class="mat-elevation-z8">
+  <!-- id Column -->
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> No. </th>
+    <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="date_paid">
+    <th mat-header-cell *matHeaderCellDef> Date Paid </th>
+    <td mat-cell *matCellDef="let row"> {{row.date_paid}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="amount">
+    <th mat-header-cell *matHeaderCellDef> Amount</th>
+    <td mat-cell *matCellDef="let row"> {{row.amount}} </td>
+  </ng-container>
+
+
+
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+<br>
+<br>
