--- a/src/app/staff/staff.component.scss
+++ b/src/app/staff/staff.component.scss
@@ -66,7 +66,7 @@ width: 25%;
   height: 100%;
   width: 200px;
   margin-left: 20px;
-  background-color: #7048EC;
+  background-color: #7048ec;
   font-weight: bold;
   color: white;
   padding: 10px 20px;
